mToM resubmitted to mind and language

--- a/mindreading/minimal theory of mind (new version)/minimal theory of mind.nv.tex
+++ b/mindreading/minimal theory of mind (new version)/minimal theory of mind.nv.tex
@@ -10,8 +10,8 @@
 \def \iauthor {Stephen A. Butterfill \& Ian A. Apperly}
 \def \iemail{s.butterfill@warwick.ac.uk}
 %for anonymous submisison
-%\def \iauthor {}
-%\def \iemail{}
+\def \iauthor {}
+\def \iemail{}
 %\date{}
 
 \input{$HOME/Documents/submissions/preamble_steve_paper2}
@@ -28,8 +28,8 @@
 
 %these two lines are for anonymous submission --- they remove author and date
 %but don't forget to remove defs above as well --- otherwise it will be in the metadata
-%\author{}
-%\date{}
+\author{}
+\date{}
 
 
 \maketitle
@@ -66,7 +66,7 @@ As we will explain, this has consequences
 for interpreting a range of findings concerning infants', adults' and nonhumans' performances on theory of mind tasks.
 It may help us to understand what enables those with limited cognitive resources or little conceptual sophistication, such as infants, chimpanzees, scrub-jays and human adults under load, to track, within limits, facts about perceptions and beliefs.
 
-In this section we defend explain our question; in the next sections we introduce the findings which motivate facing it before starting to answer it in the fourth section.
+In this section we defend and explain our question; in the next sections we introduce the findings which motivate facing it before starting to answer it in the fourth section.
 
 Some may find our question initially incomprehensible.
 Could abilities to track false beliefs (say) really involve anything other than representing false beliefs?
@@ -139,7 +139,7 @@ The result---minimal theory of mind---is unlike its precursors in that it is ric
 Our question is theoretical: it concerns 
 not what anyone does represent
 but what someone could represent that would enable her, at least within limits, to track perceptions, knowledge states and beliefs.
-The motivation for facing up to this question is, of course, partly empirical.
+However, the motivation for facing up to this question is, of course, partly empirical.
 
 Consider ordinary adult humans.
 Since they can represent beliefs and other propositional attitudes as such, 
@@ -160,7 +160,7 @@ Relatedly, \citet{Samson:2010jm} provide evidence that identifying what another 
 Taken together, these findings suggest that, at least in adults, tracking others' perceptions and beliefs is sometimes automatic.
 
 But there is also a body of evidence supporting a different conclusion.
-\citet{back:2010_apperly} found that subjects are significantly slower to answer an unexpected question about another's belief when that belief is false compared to when it is true \citep[see also][]{apperly:2006_belief}.
+\citet{back:2010_apperly} found that subjects are significantly slower to answer an unexpected question about another's true or false belief compared with matched questions about reality \citep[see also][]{apperly:2006_belief}.
 This suggests that, at least in adults, belief tracking is not automatic.
 There is also evidence that, even in relatively simple situations, 
 using facts about others' beliefs is not automatic \citep{Keysar:2003xu,apperly:2010_limits}.
@@ -183,9 +183,9 @@ on causation: \citet{Michotte:1946nz}, \citet{Scholl:2004dx}.
 The evidence suggests that the same may be true for perception and belief.
 In adult humans, some theory of mind abilities involve automatic processes whereas others depend on nonautomatic processes. 
 
-A closely related view has already been elaborated and defended in more detail by
+A closely related view has already been elaborated and defended in some detail by
 \citet[]{Apperly:2009ju},
-although their argument complements ours by drawing  primarily on developmental and comparative research. 
+whose argument complements ours by drawing  primarily on developmental and comparative research, and less on theoretical motivations. 
 According to them,
 adults may enjoy efficient but inflexible forms of theory of mind cognition in addition to the full-blown form which involves representing beliefs and other propositional attitudes as such.
 While aspects of this conjecture have already been tested \citep[]{Samson:2010jm, en_2397, surtees_direct_2011}, it raises two complementary questions (as Apperly \& Butterfill themselves note).  
@@ -232,7 +232,7 @@ that not all of their abilities to track perceptions and beliefs involve represe
 Further motivation for our question comes from evidence for theory of mind abilities in young children and infants.
 Children in their second year use pointing to provide information to others \citep[]{en_1093} in ways that reflect a partner’s ignorance or knowledge \citep[]{en_1699}, as well as providing more information to ignorant than knowledgeable partners when making requests \citep[]{en_1140}.  One-year-old children also predict actions of agents with false beliefs about the locations of objects \citep[]{en_1092, en_1208} and choose different ways of interacting with others depending on whether their beliefs are true or false \citep[]{en_1783,Knudsen:2011fk,southgate:2010fb}.  And in much the way that irrelevant facts about the contents of others’ beliefs modulate adult subjects’ response times, such facts also affect how long 7-month-old infants look at some stimuli \citep[]{kovacs_social_2010}.
 
-What do these infants and young children represent that enables them, within limits, to track others’ perceptions, knowledge states and beliefs?   
+What do these infants and young children represent that enables them to track others’ perceptions, knowledge states and beliefs in such cases?   
 The most straightforward answer would be to suppose that they represent perceptions, knowledge states and beliefs as such \citep[e.g.][]{en_1138, en_1691}.  
 But this answer faces several objections.  A body of evidence  suggests that representing beliefs requires conceptual sophistication, for it has a protracted developmental course stretching over several years \citep[]{en_87, en_89} and its acquisition is tied to the development of executive function \citep[]{en_410, en_1130} and language \citep[]{en_1209}.  Infants and young children are deficient in these.  
 Development of reasoning about beliefs in humans may also be facilitated by explicit training \citep[]{en_85} and environmental factors such as siblings \citep[]{en_507, en_1299}.  
@@ -245,7 +245,7 @@ but are instead based on
 representations of nonintentional behaviour only.
 It is arguably possible in principle to explain some belief-tracking abilities by appeal to hypothetical behaviour reading capacities  \citep{perner:1988_developing,en_1168, en_1169}.
 But there are several objections to the claim that the full range of even infants' abilities to track perceptions and beliefs could be explained in this way \citep{en_1691,Apperly:2009ju}.  
-And what is is currently known about humans' actual behaviour reading capacities suggests that they are unlikely to explain systematic success on false belief tasks.%
+And what is currently known about humans' actual behaviour reading capacities suggests that they are unlikely to explain systematic success on false belief tasks.%
 \footnote{
 Key studies include
 	\citet{Newtson:1976ni}, 
@@ -259,7 +259,7 @@ Here, then, is a second source of motivation for our question about what someone
 As we have seen, there are significant if not decisive objections to the two best developed conjectures about infant theory of mind abilities, the conjecture that these involve representing perceptions, knowledge states and beliefs as such and the conjecture that these involve representing nonintentional behaviour only.  
 These objections, while not decisive, justify exploring alternatives.
 
-Theory of mind abilities are not only found in humans.
+Finally, theory of mind abilities are not only found in humans.
 For instance,
 scrub-jays can selectively re-cache their food in ways that deprive competitors of knowledge of its location \citep{Clayton:2007fh}, and  chimpanzees can both select routes to approach food which conceal them from a competitor’s view \citep[]{en_1546} and also retrieve food using strategies that optimize their return given what a dominant competitor has seen \citep[]{en_1545}.  
 There is debate about the cognitive underpinnings of these abilities. 
@@ -273,9 +273,9 @@ For example, on chimpanzees: \citet{Tomasello:2005ce,
 			Call:2008di}; and on scrub-jays: 
 			\citet[p.\ 73]{Emery:2007ze}.
 }
-If these arguments are not yet decisive
-and if the available evidence does not already tightly constrain the space of admissible hypotheses,
-then the construction of a minimal theory of mind may also be relevant to these debates.
+There is certainly no current resolution to these arguments,
+and since the available evidence does not already tightly constrain the space of admissible hypotheses,
+the construction of a minimal theory of mind may also be relevant to these debates.
 For the hypothesis that minimal theory of mind explains particular subjects' abilities to track perceptions or beliefs can be empirically distinguished from hypotheses about representations of nonintentional behaviour only and also from hypotheses about representations of perceptions, knowledge states and beliefs (as we explain in Sections \ref{sec:limits1} and \ref{sec:limits2} below).
 
 
@@ -295,7 +295,7 @@ In this section we begin with someone, call her Lucky, capable  of representing 
 \footnote{
 In standard false belief tasks, `[t]he subject is aware that he/she and another person [call him Maxi] witness a certain state of affairs x.  Then, in the absence of the other person the subject witnesses an unexpected change in the state of affairs from x to y' \citep[][p.\ 106]{en_89}.  The test concerns whether the subject realises that Maxi will falsely believe x to obtain.  In many cases the states of affairs, x and y, differ only with respect to the location of an object \citep[e.g.][]{en_1092, en_1208, en_1824}. 
 As we go on to discuss, our proposal for a minimal theory of mind could be extended to cover a range of other cases;
-but importantly there are also false belief tasks success on which cannot be explained by minimal theory of mind cognition (see Section \vref{sec:limits1}).
+but importantly there are also false belief tasks success on which success could not be explained by minimal theory of mind cognition (see Section \vref{sec:limits1}).
 }
 
 
@@ -412,11 +412,13 @@ It is striking that philosophers have quite different views about what seeing in
 There is at least as much uncertainty concerning what might be involved in representing perceptions as such. 
 So it is not possible for us to say with certainty what it is to represent perceptions as such.  
 Even so, we can be sure that there are some differences between encountering and perception.
-If perceptions are representations, then representing perceptions as such plausibly involves representing representations.
+Perhaps most obviously, if perceptions are representations, then representing perceptions as such plausibly involves representing representations.
 Since encounterings are relations not representations (by definition), representing encounterings will  differ from representing perceptions in that only the latter involves representing representations.
+
+
 But, as mentioned, not everyone agrees that perceptions are representations.
 We should therefore consider a bundle of features.
-Perception constitutively involves appearances, modalities or the possibility of illusion or is constitutively linked to reasons, knowledge or informational states.
+According to one or other of the theories just described, perception constitutively involves appearances, modalities or the possibility of illusion or is constitutively linked to reasons, knowledge or informational states.
 It is plausible that representing perceptions as such involves understanding something about some of these things.
 Since encountering does not constitutively involve any of these (by definition), 
 representing encounterings may differ from representing perceptions in that it does not require any kind of sensitivity to constitutive links with reasons, knowledge or informational states and nor does it require understanding  anything about appearances, modalities or the possibility of illusion.
@@ -431,7 +433,10 @@ At this point we switch our attention from conditions on the \textit{occurrence}
 We can capture this condition and more by introducing a new notion, \textit{registration}.  Registration is a relation between an individual, an object and a location which will be implicitly defined by principles linking it to encountering and action.  
 By design, applying all of these principles would sometimes lead to inconsistencies.  
 Where it would be impossible to apply all the principles consistently, consistency is to be achieved by having principles mentioned later trump principles mentioned earlier.
-The first  principle defining registration is that an individual registers an object at a location if and only if she most recently encountered it at that location.  As is already clear from this principle, registration is like belief in that it has a correctness condition which may not obtain: a registration is correct when the object is in the location.   Since representing registration brings no benefit for Lucky independently of its connection to action, this principle cannot stand alone in our sequence; it is only the first half of the third principle.
+The first  principle defining registration is that an individual registers an object at a location if and only if she most recently encountered it at that location.  As is already clear from this principle, registration is like belief in that it has a correctness condition which may not obtain: a registration is correct when the object is in the location.   
+
+
+Since representing registration brings no benefit for Lucky independently of its connection to action, this principle cannot stand alone in our sequence; it is only the first half of the third principle.
 
 The second half of the third principle states that correct registration is a condition of successful action.  More precisely, in order to successfully perform a goal-directed action with a goal that specifies a particular object, the agent must correctly register that object.%
 \footnote{ 	
@@ -455,9 +460,9 @@ The scrub-jays preferred to recover and re-cache food cached in the presence of 
 
 A third application of the third principle is to infant pointing.  \citet{en_1093} show that 12- and 18-month-olds point in order to provide relevant information to adults about the locations of objects.  In their experiment, infants watch as an adult uses an object in some task.  Then the adult appears to accidentally misplace it.  Later, when the adult visibly needs that object to complete the task again, infants reliably point to it.  Apparently infants point not in order to get the object or to share interest in it, but to enable the adult to complete a task.  The authors suggest that this could be explained either by supposing that infants understand what the adult does not know, or that they understand what the adult is not attending to \citep[][p.\ 185]{en_1093}.  As knowledge and attention are both complex psychological notions, these suggestions raise the hard question of what children might understand of them.  Another possible explanation involves registration.  Maybe the infants understand that correct registration is necessary for successful goal-directed action and that pointing is a way of generating correct registration.  (None of these explanations bear on what is perhaps most interesting about these findings, that infants care to inform others and do so spontaneously.  Minimal theory of mind as described here is at most a small part of a larger story.)
 
-Note that have not argued for the truth of any hypothesis about what chimpanzees, scrub-jays or infants represent.
+Note that we have not argued for the truth of any hypothesis about what chimpanzees, scrub-jays or infants represent.
 As explained above, what motivates our enquiry is not that there is already evidence for hypotheses about particular subjects' minimal theory of mind cognition: it is that, given the limited evidence for competing hypotheses and the objections they face, new hypotheses are worth formulating and testing.
-And in later sections we will explain how hypotheses about minimal theory of mind generate testable predictions, enabling them to be empirically distinguished from competing hypotheses.
+In later sections we will explain how hypotheses about minimal theory of mind generate testable predictions, enabling them to be empirically distinguished from competing hypotheses.
 For now our focus is the question of what a subject could represent that would enable her to track track perceptions, knowledge states and beliefs in ways measured by various experimental paradigms.
 
 
@@ -471,11 +476,11 @@ Now that Lucky understands registration as a factor influencing action it can se
 %, objects’ masses by measuring their weights (within limits) 
 and prospective sexual partners’ virtues by representing their plumage, so also you can track beliefs by representing registrations.
 
-Applications of the fourth principle therefore include Onishi and Baillargeon’s (\citeyear[]{en_1092}) false belief task.  Subjects are shown an adult observer who is present while a piece of melon is placed in one box.  In the critical condition, the adult observer is then absent while the melon moves to another box.  Comparative looking times indicate that the subjects, who are 14-month-old infants, expect that the adult will reach into the box not containing the melon.\footnote{ 	This finding is supported by a growing body of related research \citep[including][]{en_1666, en_1690, en_1691, en_1208, en_1261}.}  The authors explain this finding by hypothesizing that the infants are ascribing beliefs about the melon’s location to the adults \citep[][p.\ 257]{en_1092}.  Alternatively, the findings could be explained on the hypothesis that they are tracking registration as a cause of action.
+Applications of the fourth principle therefore include Onishi and Baillargeon’s (\citeyear[]{en_1092}) false belief task.  Infant subjects are shown an adult observer who is present while a piece of melon is placed in one box.  In the critical condition, the adult observer is then absent while the melon moves to another box.  Comparative looking times indicate that the subjects, who are 14-month-old infants, expect that the adult will reach into the box not containing the melon.\footnote{ 	This finding is supported by a growing body of related research \citep[including][]{en_1666, en_1690, en_1691, en_1208, en_1261}.}  The authors explain this finding by hypothesizing that the infants are ascribing beliefs about the melon’s location to the adults \citep[][p.\ 257]{en_1092}.  Alternatively, the findings could be explained on the hypothesis that they are tracking registration as a cause of action.
 
 
 \subsection{Extensions and variations}
-With the fourth principle we completed the construction of a minimal theory of mind capable of underwriting success on some false belief tasks.  
+With the fourth principle we have completed the construction of a minimal theory of mind capable of underwriting success on some false belief tasks.  
 We stop here because false belief tasks are often taken to be an acid test for theory of mind.
 But of course additonal principles can be added accommodate further theory of mind abilities.  
 For instance, further principles might extend the definition of registration.  
@@ -557,7 +562,7 @@ Therefore:
 %
 This inference from (1$'$) and (2) to (3$'$) is logically valid.  It is valid because registration is a relation to objects.  We can compare registration with other relations like being left of something.  If Charly is Samantha (whether you know it or not), then anyone who is left of Charly is left of Samantha; similarly for registering Charly’s location. 
 
-This formal difference between belief and registration entails a limit on minimal theory of mind cognition.  Consider Lucky who tracks beliefs by means of representing registrations only and is unable to represent beliefs. Lucky should have no problem predicting actions based on false beliefs about the locations of objects but she should encounter difficulties in predicting actions based on beliefs essentially involving mistakes about identity.  In particular, Lucky should not be able to understand why, when Mitch registers \(<\)Charly, Baltimore\(>\), he continues searching for Samantha.\footnote{ 	This assumes that Lucky herself knows that Charly is Samantha.  To ease exposition we assume throughout that Lucky has no false beliefs involving identity.}  For to register \(<\)Charly, Baltimore\(>\) is the same thing as registering \(<\)Samantha, Baltimore\(>\). And Lucky should be equally at a loss when those she observes mistakenly believe that two distinct people are identical.  By contrast, subjects who can represent beliefs as such should have no special problem with false beliefs essentially involving identity.  This is how mistakes about the identities of objects can be used to distinguish minimal from full-blown theory of mind cognition.%
+This formal difference between belief and registration entails a limit on minimal theory of mind cognition.  Consider Lucky who tracks beliefs by means of representing registrations only and is unable to represent beliefs. Lucky should have no problem predicting actions based on false beliefs about the locations of objects but she should encounter difficulties in predicting actions based on beliefs essentially involving mistakes about identity.  In particular, Lucky should not be able to understand why, when Mitch registers \(<\)Charly, Baltimore\(>\), he continues searching for Samantha.\footnote{ 	This assumes that Lucky herself knows that Charly is Samantha.  To ease exposition we assume throughout that Lucky has no false beliefs involving identity.}  For to register \(<\)Charly, Baltimore\(>\) is the same thing as registering \(<\)Samantha, Baltimore\(>\). And Lucky should be equally at a loss when those she observes someone mistakenly believe that two distinct people are identical.  By contrast, subjects who can represent beliefs as such should have no special problem with false beliefs essentially involving identity.  This is how mistakes about the identities of objects can be used to distinguish minimal from full-blown theory of mind cognition.%
 \footnote{ 	
 Related points about quantification entail further testable distinctions.  For instance, minimal theory of mind should make it impossible to track beliefs whose contents essentially involve \textit{most} objects having a certain property.  It is beyond the scope of this paper to elaborate on these predictions.
 }
@@ -604,7 +609,7 @@ When the protagonist sees a ball appear from behind the screen and leave the sce
 \end{figure}
 
 
-Given that this analysis, it is notable that one study already claims to have found positive evidence that infants can ascribe beliefs about identity. 
+Given this analysis, it is notable that one study already claims to have found positive evidence that infants can ascribe beliefs about identity. 
 Scott and Baillargeon (\citeyear{en_1690}) have already conducted experiments which aim to show that 18-month-old infants are able to represent beliefs involving mistakes about `which particular object \textit{token}' another is facing rather than only about `which \textit{type} of object' is present (p.\ 1179). However, while their aim is clearly relevant, we shall show that these experiments do not succeed in testing whether infants ascribe beliefs about identity.  In essence, their paradigm involves two types of object, a divisible penguin which affords hiding a key and an indivisible penguin which lacks this affordance.  The divisible penguin has two states, divided and whole.  When whole it is visually indistinguishable from the indivisible penguin which does not afford hiding a key.  Infants sit opposite a protagonist.  Familiarisation trials provide information that the protagonist can expect there to be two penguins in the scene at all times, one of each type; these trials also provide information that the protagonist can expect the divisible penguin to appear in its divided state. In the critical condition, the scene contains an uncovered and a covered penguin. The uncovered penguin is divisible but, because it is in the whole state, it might easily be taken to be indivisible.  The covered penguin is indivisible.  The findings suggest that infants know that the uncovered penguin is divisible but expect the protagonist to believe that the uncovered penguin is indivisible and to infer that the covered penguin is divisible.  Does this pattern of knowledge and expectation require that the infants have attributed a false belief about identity?  This is not necessary. Suppose that infants attributed the following reasoning to the protagonist: this penguin visible on my right is \textit{an} indivisible penguin; \textit{a} divisible penguin is always present; therefore there is \textit{a} divisible penguin under the cover.  This reasoning concerns only the types of objects present and does not involve identity. Yet it is sufficient (together with some further inferences about the protagonists’ goal) for success. So while Scott and Baillargeon’s (2010) findings are interesting in many respects, their implementation does not provide evidence that infants ascribe beliefs about identity.
 
 In this section we have explained ways of distinguishing minimal theory of mind cognition from its full-blown counterpart.  Where subjects are able to track beliefs about identity we know they are not relying only on minimal theory of mind; and, conversely, where subjects are able to track beliefs about objects’ properties but not about identity, we can infer that they are not using full-blown theory of mind.  We next consider how  minimal theory of mind might be distinguished experimentally from strategies which involve representing nonintentional behaviour only.
